--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -7,7 +7,7 @@
         <h1>库存管理信息系统</h1>
         <form action="checkuser" name="form1">
             用户名:<input name="uid"><br>
-            密码：<input type="password"><br>
+            密码：<input type="password" name="upass"><br>
             <input type="submit">
         </form>
     </body>
