--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -4,6 +4,8 @@
         <title></title>
     </head>
     <body>
+        <img src="img/bd_logo1.png">
+        <a href="file/InletexEMCFree.exe">下载</a>
         <h1>库存管理信息系统</h1>
         <form action="checkuser" name="form1">
             用户名:<input name="uid"><br>
