--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -7,7 +7,7 @@
         <img src="img/bd_logo1.png">
         <a href="file/InletexEMCFree.exe">下载</a>
         <h1>库存管理信息系统</h1>
-        <form action="checkuser" name="form1">
+        <form action="checkuser" name="form1" method="POST">
             用户名:<input name="uid"><br>
             密码：<input type="password" name="upass"><br>
             <input type="submit">
